fixes (many main methods, running tests with preview)