@@ -9,23 +9,40 @@
 	<description>Use java structured concurency to walk all files of a directory (a drive) and execute an action for each file (for example calculate size)</description>
 	<properties>
 		<java.version>22</java.version>
-	</properties>
+        <junit-jupiter.version>5.11.0</junit-jupiter.version>
+        <assertj-core.version>3.26.3</assertj-core.version>
+    </properties>
 	<dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>RELEASE</version>
+            <version>${assertj-core.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
-	<build>
+
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit-jupiter.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+
+
+    <build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -34,21 +51,17 @@
 					<compilerArgs>--enable-preview</compilerArgs>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
+                    <parameters>true</parameters>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>
-                                bibonne.filestree.traversing.Traverse
-                            </mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-		</plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
+
+        </plugins>
 	</build>
 </project>
